Improved merge command. Broke NSCA tests